test/errors/invalid_decls.aw
foreign import : C {
func invalid_func(...)
}
